freeze the Nav bar

--- a/styles/Desc.module.scss
+++ b/styles/Desc.module.scss
@@ -153,7 +153,7 @@ html {
               background-size: cover;
               transition: ease-in-out 0.3s;
 
-              z-index: 2;
+              // z-index: 2;
               &:before {
                 content: " ";
                 position: absolute;
@@ -207,7 +207,7 @@ html {
                   transform: translate3d(30%, 0px, 0px);
                   opacity: 1;
                   color: #dfdfdf;
-                  left: 30px;
+                  left: -60px;
                   bottom: 50px;
                   font-size: x-large;
                 }
@@ -230,7 +230,7 @@ html {
               background-size: cover;
               transition: ease-in-out 0.3s;
 
-              z-index: 2;
+              // z-index: 2;
               &:before {
                 content: " ";
                 position: absolute;
@@ -284,7 +284,7 @@ html {
                   transform: translate3d(30%, 0px, 0px);
                   opacity: 1;
                   color: #dfdfdf;
-                  left: 30px;
+                  left: -60px;
                   bottom: 50px;
                   font-size: x-large;
                 }
@@ -307,7 +307,7 @@ html {
               background-size: cover;
               transition: ease-in-out 0.3s;
 
-              z-index: 2;
+              // z-index: 2;
               &:before {
                 content: " ";
                 position: absolute;
@@ -361,7 +361,7 @@ html {
                   transform: translate3d(30%, 0px, 0px);
                   opacity: 1;
                   color: #dfdfdf;
-                  left: 30px;
+                  left: -60px;
                   bottom: 50px;
                   font-size: x-large;
                 }
@@ -384,7 +384,7 @@ html {
               background-size: cover;
               transition: ease-in-out 0.3s;
 
-              z-index: 2;
+              // z-index: 1;
               &:before {
                 content: " ";
                 position: absolute;
@@ -438,7 +438,7 @@ html {
                   transform: translate3d(30%, 0px, 0px);
                   opacity: 1;
                   color: #fdfdfa;
-                  left: 30px;
+                  left: -60px;
                   bottom: 50px;
                   font-size: x-large;
                 }
@@ -462,7 +462,7 @@ html {
               background-size: cover;
               transition: ease-in-out 0.3s;
 
-              z-index: 2;
+              // z-index: 2;
               &:before {
                 content: " ";
                 position: absolute;
@@ -516,7 +516,7 @@ html {
                   transform: translate3d(30%, 0px, 0px);
                   opacity: 1;
                   color: #dfdfdf;
-                  left: 30px;
+                  left: -60px;
                   bottom: 50px;
                   font-size: x-large;
                 }
