--- a/styles/RegulationSection.module.scss
+++ b/styles/RegulationSection.module.scss
@@ -6,7 +6,8 @@ $slide-width: 30rem;
 .text {
   font-family: "Oswald", sans-serif;
   font-size: xx-large;
-  margin-bottom: 35px;
+  margin-bottom: 40px;
+  margin-left: 44.2%;
   // margin-top: 5px;
 }
 .text1 {
