--- a/styles/normalText.module.scss
+++ b/styles/normalText.module.scss
@@ -46,3 +46,12 @@
   //   font-size: large;
   font-style: inherit;
 }
+.infoBlackNew {
+  color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Roboto Slab", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-style: inherit;
+}
