--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,8 +1,14 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap");
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: Helvetica, monospace;
+  /* font-family: Helvetica, monospace; */
+  font-family: "Roboto Slab", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-style: inherit;
 }
 
 a {
@@ -12,6 +18,12 @@ a {
 
 * {
   box-sizing: border-box;
+  font-family: "Roboto Slab", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-style: inherit;
 }
-
-
+h2 {
+  font-family: "Roboto Slab", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-style: inherit;
+}
