--- a/styles/ArrowTab.module.css
+++ b/styles/ArrowTab.module.css
@@ -49,4 +49,11 @@
     background-color: rgb(244, 248, 248);
     padding: 5rem;
     margin-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+}
+
+.activePane img {
+    width: 30rem;
+    align-self: center;
 }
