--- a/styles/Animals.module.css
+++ b/styles/Animals.module.css
@@ -69,14 +69,16 @@
 
 .bioInfo {
   display: flex;
-  padding: 2.5rem;
+  margin: 2.5rem;
   align-items: center;
   width: 100%;
+  height: 350px;
+
   /* margin-left: 10%; */
 }
 
 .bioInfo img {
-  height: 300px;
+  height: 350px;
   width: 340px;
 }
 
