--- a/styles/Animals.module.css
+++ b/styles/Animals.module.css
@@ -138,6 +138,7 @@
   box-shadow: 0 20px 40px -14px rgba(0, 0, 0, 0.25);
   display: flex;
   flex-direction: column;
+  width: 420px;
   margin: 1rem;
   height: 450px;
   justify-content: flex-start;
