--- a/styles/Desc.module.scss
+++ b/styles/Desc.module.scss
@@ -35,7 +35,7 @@ html {
   width: 48px;
   height: 48px;
   margin-left: 110px;
-  background: #007fff;
+  background: #01bf71;
   border-radius: 100px;
   align-items: center;
   justify-content: center;
