--- a/styles/MapButton.module.scss
+++ b/styles/MapButton.module.scss
@@ -44,6 +44,7 @@
   background-color: rgb(244, 248, 248);
   position: absolute;
   z-index: 10;
+  margin-top: 8px;
 }
 .controlItem {
   margin-left: 20px;
@@ -52,7 +53,7 @@
 }
 
 .cameraContainer {
-  height: 12rem;
+  height: 13rem;
   // overflow: hidden;
   width: 17rem;
   // margin-left: 84%;
