--- a/styles/Animals.module.css
+++ b/styles/Animals.module.css
@@ -69,7 +69,9 @@
 
 .bioInfo {
   display: flex;
-  margin: 2.5rem;
+  /* margin: 2.5rem; */
+  margin-bottom: 2rem;
+  margin-left: 0.8rem;
   align-items: center;
   width: 100%;
   height: 350px;
@@ -86,7 +88,7 @@
   display: flex;
   flex-direction: column;
   /* border-radius: 30px; */
-  background-color: rgba(167, 121, 68, 0.363);
+  /* background-color: rgba(167, 121, 68, 0.363); */
   /* padding: 1rem; */
 
   margin-bottom: -34px;
@@ -95,7 +97,7 @@
 .infoCard {
   padding: 1rem;
   background-color: rgba(167, 121, 68, 0.363);
-  width: 37%;
+  width: 34%;
   height: 100%;
   color: rgb(85, 85, 85);
   border-radius: 10px;
@@ -106,15 +108,15 @@
 .barCard {
   /* padding: 1rem; */
   /* background-color: rgba(197, 193, 188, 0.363); */
-  width: 40%;
+  width: 50%;
   height: 100%;
   border-radius: 10px;
   margin-left: 10px;
-  margin-bottom: -30px;
+  margin-bottom: -5%;
 }
 
 .infoCard p {
-  font-size: 1.3rem;
+  font-size: 1rem;
 }
 
 .infoSection {
