--- a/styles/Button.module.css
+++ b/styles/Button.module.css
@@ -16,7 +16,7 @@
   font-size: 10px;
   letter-spacing: 4px;
   position: relative;
-  background-color: #16a085;
+  background-color: #01bf71;
   border: none;
   color: #fff;
   padding: 20px;
@@ -33,7 +33,7 @@
 
 .button:hover {
   background: #fff;
-  box-shadow: 0px 2px 10px 5px #1abc9c;
+  box-shadow: 0px 2px 10px 5px #01bf71;
   color: #000;
 }
 
